--- a/1BasicAlogrithm/8.HighLevel.ipynb
+++ b/1BasicAlogrithm/8.HighLevel.ipynb
@@ -2870,12 +2870,539 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82e3ff88-a3fb-41cc-b687-e1bd7df27302",
+   "metadata": {},
+   "source": [
+    "# 59 2657. 找到两个数组的前缀公共数组\n",
+    "https://leetcode.cn/problems/find-the-prefix-common-array-of-two-arrays/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1017,
+   "id": "4654f56b-c80c-4bec-8a95-742154a001a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3]"
+      ]
+     },
+     "execution_count": 1017,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def findThePrefixCommonArray(self, A, B):\n",
+    "        n = min(len(A), len(B))\n",
+    "        res = []\n",
+    "        for i in range(n):\n",
+    "            c = set(A[:i + 1]) & set(B[: i+ 1])\n",
+    "            res.append(len(c))\n",
+    "        return res\n",
+    "\n",
+    "A = [1,3,2,4]\n",
+    "B = [3,1,2,4]\n",
+    "A = [2,3,1]\n",
+    "B = [3,1,2]\n",
+    "ans = Solution()\n",
+    "ans.findThePrefixCommonArray(A, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c17046e2-08e3-49ba-a228-caf29d265973",
+   "metadata": {},
+   "source": [
+    "# 60 面试题 16.01. 交换数字\n",
+    "\n",
+    "https://leetcode.cn/problems/swap-numbers-lcci/description/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f13d12a-a9f1-44d3-9ccd-36849380d14f",
+   "id": "266a2a57-291a-4ca7-abc7-d64ef3dde60f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def swapNumbers(self, numbers):\n",
+    "        numbers[0], numbers[1] = numbers[1], numbers[0]\n",
+    "        return numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c762d99-882b-438d-b337-f026b87c9537",
+   "metadata": {},
+   "source": [
+    "# 61 LCR 178. 训练计划 VI\n",
+    "\n",
+    "https://leetcode.cn/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-ii-lcof/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f06c9c-db97-4ca9-938c-207b0eb7c7ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def trainingPlan(self, actions):\n",
+    "        s = Counter(actions)\n",
+    "        for i in s:\n",
+    "            if s[i] == 1:\n",
+    "                return i"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05177913-eead-4d9b-bdfa-c7e574ed3219",
+   "metadata": {},
+   "source": [
+    "# 62  3195. 包含所有 1 的最小矩形面积 I\n",
+    "https://leetcode.cn/problems/find-the-minimum-area-to-cover-all-ones-i/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1053,
+   "id": "479b5370-c6ac-4ac5-9492-bd87462987c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1053,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def minimumArea(self, grid):\n",
+    "        rowmin,rowmax,colmin,colmax= float(\"inf\"), -float(\"inf\"), float(\"inf\") , -float(\"inf\")\n",
+    "        for i in range(len(grid)):\n",
+    "            for j in range(len(grid[0])):\n",
+    "                if grid[i][j]:\n",
+    "                    rowmin=min(rowmin,i)\n",
+    "                    rowmax=max(rowmax,i)\n",
+    "                    colmin=min(colmin,j)\n",
+    "                    colmax=max(colmax,j)\n",
+    "        return (colmax-colmin+1)*(rowmax-rowmin+1)\n",
+    "\n",
+    "\n",
+    "grid = [[0,1,0],[1,0,1]] #6 \n",
+    "grid = [[0],[1]]  #1\n",
+    "ans = Solution()\n",
+    "ans.minimumArea(grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21be8b43-7c0f-4b3d-8543-8408f51dc9cf",
+   "metadata": {},
+   "source": [
+    "# 63 2149 rearrange-array-elements-by-sign\n",
+    "https://leetcode.cn/problems/rearrange-array-elements-by-sign/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1044,
+   "id": "7c3b1e5b-9f60-434d-b0a6-66a420914ac7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, -2, 1, -5, 2, -4]"
+      ]
+     },
+     "execution_count": 1044,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def rearrangeArray(self, nums):\n",
+    "        pos, neg = [], []\n",
+    "        for i in nums:\n",
+    "            if i >= 0:\n",
+    "                pos.append(i)\n",
+    "            else:\n",
+    "                neg.append(i)\n",
+    "        res = []\n",
+    "        for i in range(len(pos)):\n",
+    "            res.append(pos[i])\n",
+    "            res.append(neg[i])\n",
+    "        return res\n",
+    "\n",
+    "nums = [3,1,-2,-5,2,-4]\n",
+    "ans = Solution()\n",
+    "ans.rearrangeArray(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a8da18-5e26-4108-abe7-5a9c80d40d96",
+   "metadata": {},
+   "source": [
+    "# 64 46 permutations\n",
+    "https://leetcode.cn/problems/permutations/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1055,
+   "id": "098018ad-e985-4a4e-bab6-bf25b383e454",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]"
+      ]
+     },
+     "execution_count": 1055,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "class Solution:\n",
+    "    def permute(self, nums):\n",
+    "        s = permutations(nums, len(nums))\n",
+    "        res = []\n",
+    "        for i in s:\n",
+    "            res.append(list(i))\n",
+    "        return res\n",
+    "        \n",
+    "\n",
+    "nums = [1,2,3]\n",
+    "ans = Solution()\n",
+    "ans.permute(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3c47bb-ba56-44a0-89b6-b1c8e93bd609",
+   "metadata": {},
+   "source": [
+    "# 65 1817 finding-the-users-active-minutes\n",
+    "https://leetcode.cn/problems/finding-the-users-active-minutes/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1068,
+   "id": "d51c827b-d84a-4e0c-b756-f7b341afb40c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 1068,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def findingUsersActiveMinutes(self, logs, k):\n",
+    "        res = [0] * k\n",
+    "        s = defaultdict(set)\n",
+    "        for i in logs:\n",
+    "            s[i[0]].add(i[1]) \n",
+    "        ans = []\n",
+    "        for i in s:\n",
+    "            t = len(s[i])\n",
+    "            res[t - 1] += 1\n",
+    "        return res\n",
+    "        \n",
+    "logs = [[0,5],[1,2],[0,2],[0,5],[1,3]]\n",
+    "k = 5\n",
+    "logs = [[1,1],[2,2],[2,3]]\n",
+    "k = 4\n",
+    "ans = Solution()\n",
+    "ans.findingUsersActiveMinutes(logs, k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e4e0e68-36be-4a17-af7e-7db60e1b6857",
+   "metadata": {},
+   "source": [
+    "# 66 950. reveal-cards-in-increasing-order\n",
+    "https://leetcode.cn/problems/reveal-cards-in-increasing-order/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1621d9b8-099e-4795-9ac1-be7e9034b960",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3] [4, 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 2, 5, 3]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def deckRevealedIncreasing(self, deck):\n",
+    "        deck.sort()\n",
+    "        n = len(deck)\n",
+    "        if n < 2:\n",
+    "            return deck\n",
+    "        if n ==2:\n",
+    "            return sorted(deck)\n",
+    "        else:\n",
+    "            if n % 2 == 1:\n",
+    "                a = deck[: n //2 + 1]\n",
+    "                b = deck[n // 2 + 1:]\n",
+    "                b = sorted(b[:-1], reverse=True) + [b[-1]]\n",
+    "            else:\n",
+    "                a = deck[: n //2 ]\n",
+    "                b = deck[n // 2:]\n",
+    "                b = sorted(b)\n",
+    "            print(a, b)\n",
+    "            res = []\n",
+    "            for i in range(len(a)):\n",
+    "                if i < len(b):\n",
+    "                    res.append(a[i])\n",
+    "                    res.append(b[i])\n",
+    "                else:\n",
+    "                    res.append(a[i])\n",
+    "            return res\n",
+    "        \n",
+    "        \n",
+    "deck = [17,13,11,2,3,5,7] #[2,13,3,11,5,17,7]\n",
+    "#deck = [1,1000]\n",
+    "#deck = [1,2,3,4] #[1,3,2,4]\n",
+    "deck = [1,2,3,4,5] #[1,5,2,4,3]\n",
+    "\n",
+    "\n",
+    "ans = Solution()\n",
+    "ans.deckRevealedIncreasing(deck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "60442be2-7c3d-42a6-b3be-82537a158715",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 2, 4, 3]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "class Solution:\n",
+    "    def deckRevealedIncreasing(self, deck):\n",
+    "        deck.sort()\n",
+    "        res = [0] * len(deck)\n",
+    "        index = deque(range(len(deck)))\n",
+    "        for i in sorted(deck):\n",
+    "            res[index.popleft()] = i\n",
+    "            if index:\n",
+    "                index.append(index.popleft())\n",
+    "        return res\n",
+    "        \n",
+    "deck = [17,13,11,2,3,5,7] #[2,13,3,11,5,17,7]\n",
+    "#deck = [1,1000]\n",
+    "#deck = [1,2,3,4] #[1,3,2,4]\n",
+    "deck = [1,2,3,4,5] #[1,5,2,4,3]\n",
+    "\n",
+    "ans = Solution()\n",
+    "ans.deckRevealedIncreasing(deck)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "640cd86c-35f1-4356-81d7-47b75c369e85",
+   "metadata": {},
+   "source": [
+    "# 67 1079. 活字印刷\n",
+    "\n",
+    "https://leetcode.cn/problems/letter-tile-possibilities/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f7bc31a2-06e3-449c-8dac-0b8daa8fb505",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "class Solution:\n",
+    "    def numTilePossibilities(self, tiles):\n",
+    "        res = 0\n",
+    "        for i in range(1, len(tiles) + 1):\n",
+    "            temp = set()\n",
+    "            s = permutations(tiles, i)\n",
+    "            for j in s:\n",
+    "                temp.add(j)\n",
+    "            res +=  len(temp)\n",
+    "        return res\n",
+    "tiles = \"AAB\"\n",
+    "tiles = \"AAABBC\"\n",
+    "tiles = \"V\"\n",
+    "\n",
+    "ans = Solution()\n",
+    "ans.numTilePossibilities(tiles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fd323cc-d2a0-46e4-952f-1d9a09630083",
+   "metadata": {},
+   "source": [
+    "# 68 2221. 数组的三角和\n",
+    "\n",
+    "https://leetcode.cn/problems/find-triangular-sum-of-an-array/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f585d110-00e1-4080-9a13-0f496b314009",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def triangularSum(self, nums):\n",
+    "        n = len(nums)\n",
+    "        if n < 2:\n",
+    "            return nums[0]\n",
+    "        while len(nums) > 1:\n",
+    "            temp = []\n",
+    "            for i in range(len(nums) -1):\n",
+    "                temp.append((nums[i] + nums[i + 1]) % 10)\n",
+    "            nums = temp\n",
+    "        return nums[0]\n",
+    "            \n",
+    "\n",
+    "nums = [1,2,3,4,5]\n",
+    "\n",
+    "ans = Solution()\n",
+    "ans.triangularSum(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aeff21c-7208-4a6d-92ee-9cdd3f5c0550",
+   "metadata": {},
+   "source": [
+    "# 69 890. 查找和替换模式\n",
+    "https://leetcode.cn/problems/find-and-replace-pattern/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "8de55fc8-59d1-4e81-99db-25a0ba8939e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mee', 'aqq']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def findAndReplacePattern(self, words, pattern):\n",
+    "        res = []\n",
+    "        target = len(set(pattern))\n",
+    "        for i in words:\n",
+    "            if len(set(i)) == target:\n",
+    "                r = defaultdict()\n",
+    "                s = zip(pattern, i)\n",
+    "                flag = True\n",
+    "                for j in s:\n",
+    "                    if j[0] not in r:\n",
+    "                        r[j[0]] = j[1]\n",
+    "                    else:\n",
+    "                        if j[1] != r[j[0]]:\n",
+    "                            flag = False\n",
+    "                if flag:\n",
+    "                    res.append(i)\n",
+    "        return res\n",
+    "                    \n",
+    "                    \n",
+    "            \n",
+    "\n",
+    "words = [\"abc\",\"deq\",\"mee\",\"aqq\",\"dkd\",\"ccc\"]\n",
+    "pattern = \"abb\"\n",
+    "ans = Solution()\n",
+    "ans.findAndReplacePattern(words, pattern)"
+   ]
   }
  ],
  "metadata": {
