--- a/3CourseraDL/week2/NumpyNN (honor).ipynb
+++ b/3CourseraDL/week2/NumpyNN (honor).ipynb
@@ -13,11 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "realpath: '../readonly/keras/datasets/*': No such file or directory\n",
+      "realpath: '../readonly/keras/models/*': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "# use the preloaded keras datasets and models\n",
     "! mkdir -p ~/.keras/datasets\n",
@@ -28,10 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -48,10 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Layer:\n",
@@ -122,10 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class ReLU(Layer):\n",
@@ -135,7 +136,7 @@
     "    \n",
     "    def forward(self, input):\n",
     "        \"\"\"Apply elementwise ReLU to [batch, input_units] matrix\"\"\"\n",
-    "        # <your code. Try np.maximum>\n",
+    "        return np.maximum(0, input)\n",
     "    \n",
     "    def backward(self, input, grad_output):\n",
     "        \"\"\"Compute gradient of loss w.r.t. ReLU input\"\"\"\n",
@@ -145,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# some tests\n",
@@ -199,10 +198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Dense(Layer):\n",
@@ -226,17 +223,18 @@
     "        input shape: [batch, input_units]\n",
     "        output shape: [batch, output units]\n",
     "        \"\"\"\n",
-    "        return #<your code here>\n",
+    "        fx = np.dot(input, self.weights) + self.biases\n",
+    "        return fx\n",
     "    \n",
     "    def backward(self,input,grad_output):\n",
     "        \n",
     "        # compute d f / d x = d f / d dense * d dense / d x\n",
     "        # where d dense/ d x = weights transposed\n",
-    "        grad_input = #<your code here>\n",
+    "        grad_input = np.dot(grad_output, self.weights.T)\n",
     "        \n",
     "        # compute gradient w.r.t. weights and biases\n",
-    "        grad_weights = #<your code here>\n",
-    "        grad_biases = #<your code here>\n",
+    "        grad_weights = np.dot(input.T, grad_output)/input.shape[0] #<your code here>\n",
+    "        grad_biases = grad_output.mean(axis = 0)#<your code here>\n",
     "        \n",
     "        assert grad_weights.shape == self.weights.shape and grad_biases.shape == self.biases.shape\n",
     "        # Here we perform a stochastic gradient descent step. \n",
@@ -263,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,14 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Well done!\n"
+     "ename": "AssertionError",
+     "evalue": "weight gradient does not match numeric weight gradient",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m numeric_db \u001b[38;5;241m=\u001b[39m eval_numerical_gradient(\u001b[38;5;28;01mlambda\u001b[39;00m b: compute_out_given_wb(w,b)\u001b[38;5;241m.\u001b[39mmean(\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39msum(),b )\n\u001b[1;32m     21\u001b[0m grad_w,grad_b \u001b[38;5;241m=\u001b[39m compute_grad_by_params(w,b)\n\u001b[0;32m---> 23\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(numeric_dw,grad_w,rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m,atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight gradient does not match numeric weight gradient\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mallclose(numeric_db,grad_b,rtol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m,atol\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mweight gradient does not match numeric weight gradient\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWell done!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAssertionError\u001b[0m: weight gradient does not match numeric weight gradient"
      ]
     }
    ],
@@ -393,7 +395,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -419,7 +424,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -490,7 +498,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -506,7 +517,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -576,7 +590,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -597,7 +614,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -610,7 +630,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -691,7 +714,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -705,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.6"
   },
   "toc": {
    "colors": {
@@ -733,5 +756,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
